This version improved the main activity layout. Integrate the image downloading component into the system.

--- a/HCI_Vista_Low/res/values/strings.xml
+++ b/HCI_Vista_Low/res/values/strings.xml
@@ -12,5 +12,6 @@
     <string name="album_name">HCI_Vista</string>
     <string name="server_url">http://ec2-50-112-147-146.us-west-2.compute.amazonaws.com/stanford/computeSIFT.php</string>
     <string name="title_activity_display_results">DisplayResults</string>
+    <string name="url_hint">Paste the Image URL Here</string>
 
 </resources>
