--- a/HCI_Vista_Low/res/values/strings.xml
+++ b/HCI_Vista_Low/res/values/strings.xml
@@ -16,5 +16,7 @@
     <string name="title_activity_image_gallery">ImageGallery</string>
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
+    <string name="action_speech">Speech Recognition</string>
+    <string name="action_search">Search</string>
 
 </resources>
