--- a/HCI_Vista_Low/res/values/strings.xml
+++ b/HCI_Vista_Low/res/values/strings.xml
@@ -26,5 +26,6 @@
     <string name="back">Back</string>
     <string name="title_activity_list_view">ListViewActivity</string>
     <string name="title_activity_picture">PictureActivity</string>
+    <string name="title_activity_list_view_loader">ListViewLoader</string>
 
 </resources>
